fixed issue with buttons overlapping

--- a/src/Components/TradeButtons.css
+++ b/src/Components/TradeButtons.css
@@ -2,7 +2,7 @@
     margin: 4px;
     border-radius: 10px;
     border: 0px solid black;
-    width: 150px;
+    width: 100%;
 }
 
 .sell {
